padding bottom 추가

--- a/javascript/asset/css/style.css
+++ b/javascript/asset/css/style.css
@@ -28,6 +28,7 @@ body{
 }
 #header {
     border-bottom: 1px dashed #dcdcdc;
+    padding-bottom: 40px;
 }
 #main {
     border-bottom: 1px dashed #dcdcdc;
