--- a/javascript/asset/css/style.css
+++ b/javascript/asset/css/style.css
@@ -1,8 +1,8 @@
-/* 웹폰트 */
+/* 웹폰트 --------------*/
 @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
 
-/* 리셋 */
-/* 여백 초기화 */
+/* 리셋 --------------*/
+/* 여백 초기화 --------------*/
 * {
     margin: 0;
     padding: 0;
@@ -11,18 +11,23 @@
     line-height: 1.6;
 }
 
-/* 링크 초기화 */
+/* 링크 초기화 --------------*/
 a {
     text-decoration: none;
     color: #222;
 }
 
-/*목록 초기화 */
+/*목록 초기화 --------------*/
 li {
     list-style: none;
 }
 
-/* 모든 페이지 레이아웃 */
+/* 제목 초기화 --------------*/
+h1, h2, h3, h4, h5, h6{
+    font-weight: normal;
+}
+
+/* 모든 페이지 레이아웃 --------------*/
 body{
     padding: 40px;
 }
@@ -31,6 +36,7 @@ body{
     padding-bottom: 40px;
 }
 #main {
+    padding: 40px 0;
     border-bottom: 1px dashed #dcdcdc;
 }
 #footer {
@@ -42,7 +48,7 @@ body{
     text-decoration: underline;
 }
 
-/* 헤더 영역 */
+/* 헤더 영역 --------------*/
 #header h1 {
     font-size: 60px;
 }
@@ -53,22 +59,27 @@ body{
 .header_nav ul li {
     display: inline;
 }
+
+/* 메뉴 설명 --------------*/
 .header_nav ul li a {
     /* a태그는 박스나 인라인같은것이 안먹는다 */
     border: 1px solid #222;
     padding: 8px 25px;
-    display: inline-block; /*가로값은 먹이면서 블록으로 묶는다*/
+    display: inline-block; /*가로값은 먹이면서 블록으로 묶는다 --------------*/
     margin-bottom: 8px;
 }
+
 .header_nav ul li a:hover {
     /* a태그는 박스나 인라인같은것이 안먹는다 */
     background-color: #000;
     color: #fff;
     transition: 0.3s;
 }
+
 .header_nav .study {
     margin-top: 10px;
 }
+
 .header_nav .study li {}
 .header_nav .study li a {
     border-radius: 50px;
@@ -76,6 +87,34 @@ body{
     background-color: #000;
     color: #fff;
 }
+
+/* 메인 샘플 --------------*/
+.main_sample{
+    margin-top: 40px;
+    border-top: 1px dashed #dcdcdc;
+    padding-top: 40px;
+}
+
+/* 01 변수 : 데이터 저장 --------------*/
+.main_sample h3{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+/* 01 변수 : 데이터 저장의 설명 --------------*/
+.main_sample p{
+    margin-bottom: 10px;
+    color: #666;
+}
+
+.main_sample .script{
+
+}
+
+.main_sample .result{
+    
+}
+
 @media (max-width: 800px){
     body {
         padding: 20px;
