--- a/css/asset/css/style.css
+++ b/css/asset/css/style.css
@@ -90,8 +90,9 @@ body{
 
 /* 메인 샘플 --------------*/
 .main_sample{
-    margin-top: 40px;
+    /*margin-top: 40px;*/
     /*border-top: 1px dashed #dcdcdc;*/
+    margin-bottom: 100px;
     padding-top: 40px;
 }
 
@@ -116,7 +117,6 @@ body{
 }
 
 .article {
-    padding: 2vw 0;
     line-height: 1.6;
 }
 .article h2 {
