--- a/layout/layout01_float.html
+++ b/layout/layout01_float.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>레이아웃 유형_01 floa</title>
     <!-- 전체를 감싸는 박스 하나가 있고 세부요소 박스 다섯가지 -->
     <!-- 순서 2 : 각 요소에 스타일을 어떻게 넣을건지 -->
     <style>
