--- a/layout/layout02_grid.html
+++ b/layout/layout02_grid.html
@@ -19,8 +19,8 @@
             "aside article section"
             "footer footer footer"
             ;
-            grid-template-columns: 25% 50% 25%;
-            grid-template-rows: 100px 100px 780px 100px;
+            grid-template-columns: 25% 50% 25%; /* 각 columns(열) 넓이 */
+            grid-template-rows: 100px 100px 780px 100px; /* 각 rows(행) 높이 */
         }
         #body{
             background-color: #E8F5E9;
@@ -88,8 +88,8 @@
                 "article article"
                 "footer footer"
                 ;
-                grid-template-columns: 100%;
-                grid-template-rows: 100px 100px 430px 100px 100px;
+                grid-template-columns: 100%; /*각 요소의 넓이*/
+                grid-template-rows: 100px 100px 430px 100px 100px; /*각 요의 높이*/
             }
         }
     </style>
