--- a/layout/layout01_flex.html
+++ b/layout/layout01_flex.html
@@ -1,55 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>레이아웃01</title>
     <style>
-        *{
+        * {
             margin: 0;
         }
-        #wrap{
+        body {
+            background-color: #FFF3E0
+        }
+        #wrap {
             width: 1200px;
             margin: 0 auto;
-            display: flex; /*정해진 틀 속 개체를 한줄로 자동정렬 */
-            flex-wrap: wrap; /*정해진 틀 속 개체를 각 속성에 맞춤*/
         }
-        #header{
+        #header {
             width: 100%;
             height: 100px;
-            background-color: #FFE082;
+            background-color: #FFE0B2;
         }
-        #nav{
+        #nav {
             width: 100%;
             height: 100px;
             background-color: #FFCC80;
         }
-        #aside{
+        #main {
+            display: flex;
+        }
+        #aside {
             width: 400px;
             height: 780px;
             background-color: #FFB74D;
         }
-        #section{
+        #section {
             width: 800px;
             height: 780px;
             background-color: #FFA726;
         }
-        #footer{
+        #footer {
             width: 100%;
             height: 100px;
             background-color: #FF9800;
-            clear: both;
+        }
+
+        @media(max-width:1280px){
+            #wrap{
+                width: 96%;
+            }
+        }
+        @media(max-width:768px){
+            #wrap{
+                width: 100%;
+            }
+        }
+        @media(max-width:480px){
+            #wrap{
+                width: 100%;
+            }
+            #main {
+                flex-direction: column;
+            }
+            #aside {
+                height: 300px;
+                background-color: #FFB74D;
+            }
+            #section {
+                height: 480px;
+                background-color: #FFA726;
+            }
         }
     </style>
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div>
-        <div id="nav"></div>
-        <div id="aside"></div>
-        <div id="section"></div>
-        <div id="footer"></div>
+        <header id="header"></header>
+        <nav id="nav"></nav>
+        <main id="main">
+            <aside id="aside"></aside>
+            <section id="section"></section>
+        </main>
+        <footer id="footer"></footer>
     </div>
 </body>
 </html>
