--- a/layout/layout03_flex.html
+++ b/layout/layout03_flex.html
@@ -1,125 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>레이아웃 유형 03_flex</title>
     <style>
         *{
-            margin: 0;
+            margin:0;
+            padding:0;
+            /* overflow: hidden; 푸터를 만드는 두번째 방법*/
+        }
+        body{
+            background-color: #e1f5fe;
         }
         #wrap{
             width: 1200px;
             margin: 0 auto;
-            display: flex; /*정해진 틀 속 개체를 한줄로 자동정렬 */
-            flex-wrap: wrap; /*정해진 틀 속 개체를 각 속성에 맞춤*/
-        }
-        body{
-            background-color: #EEF8FF;
         }
         #header{
-            width: 100%;
             height: 100px;
-            background-color: #B3E5FC;
+            background-color: #b3e5fc;
         }
         #nav{
-            width: 100%;
             height: 100px;
-            background-color: #81D4FA;
+            background-color: #81d4fa;
+        }
+        #main{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            height: 780px; /*높이가 고정되어 있으니까 거기에 맞춰서 flex가 작동하고 레이아웃이 column으로 잡힘 */
         }
         #aside{
             width: 30%;
             height: 780px;
-            background-color: #4FC3F7;
-            /* float: left; */
+            background-color: #4fc3f7;
         }
-        #section_menu{
-            height: 520px;
-        }
-        #section{
+        #article1{
             width: 70%;
             height: 260px;
-            background-color: #29B6F6;
-            /* float: left; */
+            background-color: #29b6f6;
         }
-        #section2{
-            width: 70%;
+        #article2-1{
+            width: 100%;
             height: 260px;
-            background-color: #03A9F4;
-            /* float: left; */
+            background-color: #03a9f4;
         }
-        #section3{
-            width: 70%;
+        #article2-2{
+            width: 100%;
             height: 260px;
-            background-color: #039BE5;
-            float: left;
+            background-color: #039be5;
         }
         #footer{
-            width: 100%;
             height: 100px;
-            background-color: #0288D1;
-            clear: both;
+            background-color: #0288d1;
+            /* clear: both; 푸터를 만드는 첫번째 방법*/
         }
-        @media(max-width:1280px){
+
+        /* 미디어 쿼리 */
+        @media(max-width: 1300px){
             #wrap{
                 width: 96%;
-                margin: 0 auto;
             }
-            #aside{
-                width: 30%;
-                height: 780px;
-                float: left;
+            #article2{
+                display: flex;
             }
-            #section2{
-                width: 35%;
+            #article2-1{
+                width: 50%;
                 height: 520px;
-                float: right;
             }
-            #section3{
-                width: 35%;
+            #article2-2{
+                width: 50%;
                 height: 520px;
-                float: right;
             }
         }
-        @media(max-width:768px){
+        @media(max-width: 768px){
             #wrap{
                 width: 100%;
             }
-            #section{
-                width: 70%;
-                height: 390px;
-                float: left;
-            }
-            #section2{
-                width: 70%;
-                height: 390px;
-                float: left;
-            }
-            #section3{
+            #article1{
                 width: 100%;
-                height: 0px;
+                height: 390px;
+            }
+            #article2-1{
+                width: 100%;
+                height: 390px;
+            }
+            #article2-2{
+                display: none;
             }
         }
-        @media(max-width:480px){
-            #wrap{
-                width: 100%;
-            }
+        @media(max-width: 480px){
             #aside{
                 width: 100%;
                 height: 200px;
             }
-            #section{
-                width: 100%;
+            #article1{
                 height: 430px;
             }
-            #section2{
-                width: 100%;
-                height: 430px;
-            }
-            #section3{
-                width: 100%;
-                height: 260px;
+            #article2-1{
+                height: 150px;
             }
         }
     </style>
@@ -128,11 +109,13 @@
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
-        <div id="aside"></div>
-        <div id="section_menu">
-            <div id="section"></div>
-            <div id="section2"></div>
-            <div id="section3"></div>
+        <div id="main">
+            <div id="aside"></div>
+            <div id="article1"></div>
+            <div id="article2">
+                <div id="article2-1"></div>
+                <div id="article2-2"></div>
+            </div>
         </div>
         <div id="footer"></div>
     </div>
