--- a/layout/layout03_float.html
+++ b/layout/layout03_float.html
@@ -1,120 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>레이아웃 유형 03_flex</title>
     <style>
         *{
-            margin: 0;
+            margin:0;
+            padding:0;
+            /* overflow: hidden; 푸터를 만드는 두번째 방법*/
+        }
+        body{
+            background-color: #e1f5fe;
         }
         #wrap{
             width: 1200px;
             margin: 0 auto;
         }
-        body{
-            background-color: #EEF8FF;
-        }
         #header{
-            width: 100%;
             height: 100px;
-            background-color: #B3E5FC;
+            background-color: #b3e5fc;
         }
         #nav{
-            width: 100%;
             height: 100px;
-            background-color: #81D4FA;
+            background-color: #81d4fa;
+        }
+        #main{
         }
         #aside{
             width: 30%;
             height: 780px;
-            background-color: #4FC3F7;
+            background-color: #4fc3f7;
             float: left;
         }
-        #section{
+        #article1{
             width: 70%;
             height: 260px;
-            background-color: #29B6F6;
+            background-color: #29b6f6;
             float: left;
         }
-        #section2{
+        #article2{
             width: 70%;
             height: 260px;
-            background-color: #03A9F4;
+            background-color: #03a9f4;
             float: left;
         }
-        #section3{
+        #article3{
             width: 70%;
             height: 260px;
-            background-color: #039BE5;
+            background-color: #039be5;
             float: left;
         }
         #footer{
-            width: 100%;
             height: 100px;
-            background-color: #0288D1;
-            clear: both;
+            background-color: #0288d1;
+            /* clear: both; 푸터를 만드는 첫번째 방법*/
         }
-        @media(max-width:1280px){
+
+        /* clearfix */
+        .clearfix::before,
+        .clearfix::after {
+            content: '';
+            display: block;
+            line-height: 0;
+        }
+        .clearfix::after {
+            clear: both; /* 푸터를 만드는 세번째 방법 */
+        }
+
+        /* 미디어 쿼리 */
+        @media(max-width: 1300px){
             #wrap{
-                width: 96%;
-                margin: 0 auto;
+                width:96%;
             }
-            #aside{
-                width: 30%;
-                height: 780px;
-                float: left;
+            #article2{
+                height: 520px;
+                width: 35%;
             }
-            #section2{
+            #article3{
                 width: 35%;
                 height: 520px;
-                float: right;
-            }
-            #section3{
-                width: 35%;
-                height: 520px;
-                float: right;
             }
         }
-        @media(max-width:768px){
+        @media(max-width: 768px){
             #wrap{
                 width: 100%;
             }
-            #section{
+            #article1{
                 width: 70%;
                 height: 390px;
-                float: left;
             }
-            #section2{
+            #article2{
                 width: 70%;
                 height: 390px;
-                float: left;
             }
-            #section3{
-                width: 100%;
-                height: 0px;
+            #article3{
+                display: none;
             }
         }
-        @media(max-width:480px){
-            #wrap{
-                width: 100%;
-            }
+        @media(max-width: 480px){
             #aside{
                 width: 100%;
                 height: 200px;
             }
-            #section{
+            #article1{
                 width: 100%;
                 height: 430px;
             }
-            #section2{
+            #article2{
                 width: 100%;
-                height: 430px;
-            }
-            #section3{
-                width: 100%;
-                height: 260px;
+                height: 150px;
             }
         }
     </style>
@@ -123,10 +119,12 @@
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
-        <div id="aside"></div>
-        <div id="section"></div>
-        <div id="section2"></div>
-        <div id="section3"></div>
+        <div id="main" class="clearfix">
+            <div id="aside"></div>
+            <div id="article1"></div>
+            <div id="article2"></div>
+            <div id="article3"></div>
+        </div>
         <div id="footer"></div>
     </div>
 </body>
