--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -119,9 +119,7 @@ body {
 
 
 .main_menu {}
-.main_menu ul {
-    margin-bottom: 20px;
-}
+
 .main_menu li {
     display: inline;
 }
@@ -142,6 +140,7 @@ body {
     border: 1px solid #000;
     padding: 30px;
     background-color: #fff;
+    margin-top: 20px;
 }
 
 
@@ -178,6 +177,90 @@ body {
     font-size: 16px;
     line-height: 1.6;
 }
+
+/* 티스토리용 문서 */
+.document{
+    word-break: keep-all; /*글자로 끊어지지 않고 단어로 끊어짐*/
+}
+.document hr{
+    border: 0;
+    border-top: 1px dashed #dcdcdc;
+    margin-top: 45px;
+}
+.document i{ /* '프로그래밍 언어' 강조 관련 */
+    font-style: normal;
+    position: relative;
+}
+.document i::before{ /* 밑줄관련 */
+    content: '';
+    background-color: #0242f149;
+    width:100%;
+    height: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 20px;
+}
+.document .t_tit{
+    font-size: 30px;
+    line-height: 1.6;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_tit2{
+    font-size: 22px;
+    line-height: 1.6;
+    margin-top: 50px;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_tit3{
+    font-size: 16px;
+    line-height: 1.6;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: 400;
+    /*font-weight: 700; 폰트 진하게*/
+}
+.document .t_desc{
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 10px !important;
+}
+
+.document .t_desc2{
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 10px !important;
+    padding: 15px 20px !important;
+    border-left: 4px solid #00db72;
+    background-color: #f9f9f9;
+}
+.document .t_box{
+    padding: 20px !important;
+    background-color: #f9f9f9;
+    margin-bottom: 10px;
+    color: #666;
+    border-radius: 5px;
+}
+.document .t_iframe{
+    position: relative;
+    padding-top: 56%;
+    width: 100%;
+    height: 0;
+
+}
+.document .t_iframe iframe{
+    border: 1px solid rgba(0,0,0,0.1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 /* 미디어쿼리 */
 @media (max-width: 900px){
