--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -91,8 +91,8 @@ body{
 
 .header_nav ul li a:hover {
     /* a태그는 박스나 인라인같은것이 안먹는다 */
-    background-color: #fff;
-    color: #000;
+    background-color: #000;
+    color: #fff;
     transition: 0.3s;
 }
 
@@ -106,6 +106,11 @@ body{
     padding: 6px 30px;
     background-color: #000;
     color: #fff;
+}
+
+.header_nav .effect li a {
+    border-radius: 40px;
+    margin-top: 10px;
 }
 
 /* 메인 샘플 --------------*/
