--- a/javascript/assets/css/quiz.css
+++ b/javascript/assets/css/quiz.css
@@ -129,10 +129,11 @@ body {
 /* quiz__wrap */
 .quiz__wrap {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin-top: 50px;
     margin-bottom: 50px;
+    flex-wrap: wrap;
 }
 
 .quiz {
