--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -251,7 +251,7 @@ body{
     color: #666;
     margin-bottom: 10px !important;
     padding: 15px 20px !important;
-    border-left: 4px solid #037D00;
+    border-left: 4px solid #3f62a6;
     background-color: #f9f9f9;
 }
 
