--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -116,20 +116,54 @@ body {
 
 .main__desc {
     margin: 200px 20px;
+    margin-top: 200px;
     border: 4px solid var(--brown);
     background-color: var(--bgSub);
-    padding: 80px;
+    padding: 120px 80px 80px 80px;
+    position: relative;
+    border-radius: 30px;
+    overflow: hidden;
+}
+
+.main__desc .deco{
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translateX(-50%);
+    padding-top: 10px;
+    white-space: nowrap;
+    width: 86%;
+    overflow: hidden;
+}
+.main__desc .deco span{
+    width: 30px;
+    height: 30px;
+    border: 10px solid var(--brown);
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    background-color: var(--bgMain);
+    margin: 0 1%;
+    position: relative;
+}
+
+.main__desc .deco span::after{
+    content: '';
+    width: 10px;
+    height: 13px;
+    background-color: var(--brown);
+    position: absolute;
+    left: 0;
+    top: -20px;
 }
 
 .main__desc .title{
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 2rem;
 }
 
 
 .main__desc .title h2 {
-    width: 35%;
+    display: inline-block;
     border: 4px solid var(--brown);
     font-size: 2rem;
     padding: 0.7rem 1rem 0.5rem 80px;
@@ -157,6 +191,32 @@ body {
     color: var(--brown);
 }
 
+.main__desc .subTitle{
+
+}
+
+.main__desc .subTitle ul {
+    overflow: hidden;
+}
+.main__desc .subTitle li {
+    /* display: inline; inline은 자체적인 padding 값이 있다 */
+    float: left;
+    margin-right: -4px;
+    margin-bottom: -4px;
+}
+.main__desc .subTitle li a {
+    font-size: 0.8rem;
+    font-family: var(--fontDocs);
+    border: 4px solid var(--brown);
+    padding: 0.5em 1em;
+    display: inline-block;
+}
+
+.main__desc .subTitle li.active a {
+    background-color: var(--brown);
+    color: var(--white)
+}
+
 .main__desc .table {
     border: 3px solid var(--brown);
     font-family: var(--fontDocs);
@@ -180,4 +240,12 @@ body {
 .main__desc .table tr td span{
     font-size: 16px;
     padding-top: 4px;
+}
+
+.main__desc .table .rowTable tr td:nth-child(2),
+.main__desc .table .rowTable tr td:nth-child(3){
+    text-align: center;
+}
+.main__desc .table .rowTable .left{
+    text-align: left !important;
 }
