--- a/javascript/assets/css/dracula_two.css
+++ b/javascript/assets/css/dracula_two.css
@@ -1,5 +1,5 @@
-pre{
-    height: 100%;
+pre {
+    height: 100%
 }
 pre code.hljs {
     display: block;
@@ -9,14 +9,14 @@ pre code.hljs {
     line-height: 1.6;
     /* margin-bottom: 20px; */
     border-radius: 5px;
-    height: 100%;
+    height: 100%
 }
 code.hljs {
     padding: 3px 5px
 }
 .hljs {
     color: #E9E9F4;
-    background: #282936
+    /* background: #28293696; */
 }
 .hljs ::selection,
 .hljs::selection {
