--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -45,6 +45,7 @@ body{
     box-shadow: 0px 0px 50px 30px #0000000a;
     z-index: 1;
     text-align: center;
+    transition: all 0.25s;
 }
 #header:hover{
     left: 0;
@@ -469,6 +470,7 @@ body{
     /* margin-top: 258px; */
     /* margin-left: 200px; */
     /* left: 20px; */
+    transition: all 0.25s;
 }
 
 .hover_button{
@@ -485,6 +487,30 @@ body{
 }
 /* 표 끝 */
 
+.extend_menu{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 20px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: #1c0d80c2;
+    padding: 23px 0px 23px 0px;
+    text-align: center;
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    backdrop-filter: blur(15px);
+    box-shadow: 0px 10px 20px 2px rgb(0 0 0 / 27%);
+    z-index: 1;
+}
+
+.extend_menu:hover{
+    transform: translateX(15px);
+}
 
 /* 다크모드 구현 */
 
@@ -495,6 +521,16 @@ body{
 }
 .hide{
     display: none;
+}
+
+.extend_menu_opacity_hide{
+    opacity: 0;
+    transition: all 0.25s;
+}
+
+.extend_menu_opacity_show{
+    opacity: 1;
+    transition: all 0.25s;
 }
 
 /* 세로 스크롤 */
@@ -532,6 +568,10 @@ body{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-animation: hue 10s infinite linear;
+}
+
+.search__input{
+    border: 1px solid #ededed;
 }
 
 @-webkit-keyframes hue {
