--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -179,6 +179,13 @@ body{
     color: #000;
 }
 
+.main_menu{
+    background-color: #ededed;
+    border:1px solid #e1e1e6;
+    border-radius: 10px;
+    padding: 15px;
+}
+
 /* intro_menu */
 .intro_menu {
     position: absolute;
