--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -296,12 +296,92 @@ body{
     cursor: help;
 }
 
+.sample .table.left tr td {
+    text-align: left;
+}
+
+.sample .table.left .ce{
+    text-align: center;
+}
+
 .sample .box{
     background-color: #f5f5f5;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
     color: #666;
+}
+
+.sample .view{
+    border: 1px solid #e6e6e6;
+    padding: 30px 20px 20px 20px;
+}
+
+.sample .blue{
+    background-color: rgb(43, 19, 180);
+    padding: 20px 20px;
+    border-radius: 10px 10px 0 0;
+    margin-bottom: 0;
+    color: white;
+}
+
+.sample .sbox {
+    width: 400px;
+    height: 200px;
+    background-color: #ededed;
+    border: 1px solid rgb(43, 19, 180);
+    padding: 20px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+
+    text-align: center;
+}
+
+.sample .sbox::after {
+    content: '';
+    width: 480px;
+    height: 280px;
+    border: 1px dashed rgb(43, 19, 180);
+    position: absolute;
+    left: -21px;
+    top: -21px;
+}
+.sample .sbox::before {
+    content: '';
+    width: 398px;
+    height: 198px;
+    border: 1px dashed rgb(43, 19, 180);
+    position: absolute;
+    left: 20px;
+    top: 20px;
+}
+
+.sample .sResult {
+    padding-top: 10px;
+    text-align: center;
+}
+.sample .button {
+    border: 1px solid #ededed;
+    border-top: 0;
+    padding: 20px;
+}
+
+
+.sample .button a{
+    border: 1px solid #ededed;
+    color: rgb(43, 19, 180);
+    border-radius: 40px;
+    padding: 10px 20px;
+    display: inline-block;
+    margin: 5px;
+}
+
+.sample .button a:hover{
+    background-color: rgb(43, 19, 180);
+    color: #fff;
 }
 
 @media (max-width: 800px){
