--- a/site/site1/assets/css/image.css
+++ b/site/site1/assets/css/image.css
@@ -1,50 +1,42 @@
-/* card */
-
-.card{
-    background-color: #ededed;
-    width: 570px;
-    height: 370px;
-    /* padding: 20px; */
-    position: relative;
-    color: #fff;
-}
-
-.card h2{
-    font-size: 32px;
-}
-
-.card:nth-child(1){
-    background-image: url(../../assets/img/bg01_01.jpg);
-}
-.card:nth-child(2){
-    background-image: url(../../assets/img/bg01_02.jpg);
-}
-
-.card_container{
+.image__inner {
     display: flex;
     justify-content: space-between;
 }
-
-.text_cont{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin: 0px 20px 20px 20px;
+.image {
+    width: 49%;
+    height: 370px;
+    color: #fff;
+    padding: 200px 30px 30px 30px;
+    box-sizing: border-box;
 }
-
-.text_cont p{
-    margin-top: 10px;
-    line-height: 1.5;
+.image.img1 {
+    background: url(../img/bg01_01.jpg) no-repeat center;
+}
+.image.img2 {
+    background: url(../img/bg01_02.jpg) no-repeat center;
+}
+.image__title {
+    font-size: 32px;
+    margin-bottom: 10px;
+}
+.image__desc {
     font-size: 16px;
     font-weight: 300;
+    margin-bottom: 10px;
+    line-height: 1.5;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
-
-.text_cont .more{
-    width: 120px;
-    height: 38px;
-    background-color: #CA9A03;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
+.image__btn {
+    font-size: 16px;
+    color: #fff;
+    background-color: #B45A30;
+    padding: 10px 20px;
+    display: inline-block;
+}
+.image__btn.yellow {
+    background-color: #B59140;
 }
