--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -86,6 +86,8 @@
         z-index: 1000;
         height: 55px;
         padding-top: 20px;
+        position: sticky;
+        top: 0;
     }
     .header__menu__media li{
         display: inline;
