--- a/site/site1/assets/css/card.css
+++ b/site/site1/assets/css/card.css
@@ -46,5 +46,9 @@
         display: block;
     }
     .card{width: 100%;}
-    .card:nth-child(1),.card:nth-child(2){margin-bottom: 20px;;}
+    .card:nth-child(1),.card:nth-child(2){margin-bottom: 20px;}
+    .section:nth-child(4){
+        padding: 120px 20px;
+        box-sizing: border-box;
+    }
 }
