--- a/site/site1/assets/css/common.css
+++ b/site/site1/assets/css/common.css
@@ -21,9 +21,9 @@
 }
 
 .actived{
-    padding: 13px 10px;
+    padding: 13px 0px;
     border: 0.5px solid #fff;
-    background-color: #f1f1f1;
+    background-color: #37536b36;
     border-radius: 5px;
     color: #000 !important;
 }
@@ -42,7 +42,24 @@ body{
     padding: 0 20px;
     margin: 0 auto;
 }
-
+#olaga{
+    opacity: 0;
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+    background: #00000069;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 25px 19px;
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    transition: 0.25s;
+    cursor: pointer;
+}
+.opacity{
+    opacity: 1 !important;
+    transition: 0.25s;
+}
 
 /* 섹션 공통요소 */
 .section {
@@ -57,6 +74,7 @@ body{
     /* 1이라고 적으면 auto랑 똑같음 */
     text-align: center;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .section>p {
