--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -1,4 +1,12 @@
 /* headerType */
+.media{
+    display: none;
+}
+
+.inline{
+    display: inline !important;
+}
+
 .header__inner{
     width: 100%;
     height: 70px;
@@ -67,6 +75,23 @@
     background-color: #000;
     color: #fff;
 }
+
+#header_logo_media{
+    font-size: 20px;
+    padding: 0 20px;
+    margin-right: 20px;
+    border-right: 1px solid #00000047;
+}
+.header__menu__media::-webkit-scrollbar{
+    height: 4px;
+    margin-bottom: 2px;
+    background-color: rgba(255, 255, 255, 0.494);
+}
+.header__menu__media::-webkit-scrollbar-button{}
+.header__menu__media::-webkit-scrollbar-thumb{
+    background-color: rgb(255 168 18);
+}
+.header__menu__media::-webkit-scrollbar-track{}
 
 @media (max-width: 1150px){
     .header__inner{
