--- a/site/site1/assets/css/imgText.css
+++ b/site/site1/assets/css/imgText.css
@@ -18,7 +18,7 @@
 }
 .imgText__txt h3{
     font-size: 50px;
-    font-weight: 300;
+    font-weight: bold;
     word-break: keep-all;
     line-height: 1.4;
     margin-bottom: 20px;
@@ -85,9 +85,18 @@
 @media (max-width: 600px){
     .imgText__inner{
         display: block;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+    .imgText__img{
+        margin-bottom: 20px;
     }
     .imgText__inner>div{
         width: 100%;
+        /* height: 385px; */
+    }
+    .section:nth-child(3){
+        padding: 20px 0;
     }
 
 }
